--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
     </link>
     
-    <title>New Raj's Portfolio</title>
+    <title>Raj's Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
