--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     
     <title>Raj's Portfolio</title>
   </head>
-  <body>
+  <body class="light-theme">
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root"></div>
