--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href=
     "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
     </link>
+
+    <link rel="preload" as="image" href="/src/assets/My-imgs/my-img.png" />
     
     <title>Raj's Portfolio</title>
   </head>
