--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
     </link>
 
-    <link rel="preload" as="image" href="/src/assets/My-imgs/my-img.png" />
+    <link rel="preload" as="image" href="/src/assets/My-imgs/my-img.webp" />
     
     <title>Raj's Portfolio</title>
   </head>
