site name change

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
     <link rel="preload" as="image" href="/src/assets/My-imgs/my-img.webp" />
     
-    <title>Raj's Portfolio</title>
+    <title>Raj Chhalotre's Portfolio</title>
   </head>
   <body class="light-theme">
     <noscript>You need to enable JavaScript to run this app.</noscript>
