--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <meta name="google-site-verification" content="NtIe0h1Yf8j0QMwfyMc_0E5Iwp8aztKlhn42s9SwEko" />
     
     <link rel="stylesheet" href=
     "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
